--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,41 @@
-remote_theme:  sighingnow/jekyll-gitbook 
+# Configurations
+title:            Na Srebrnym Globie
+longtitle:        Na Srebrnym Globie
+author:           dew0011
+email:            55606938+dew0011@users.noreply.github.com
+description: >
+  Build Jekyll site with the GitBook style.
+
+version:          1.0
+gitbook_version:  3.2.3
+
+url:              'https://dew0011.github.io'
+baseurl:          '/jekyll-gitbook'
+rss:              RSS
+
+# markdown render engine.
+markdown:         kramdown
+kramdown:
+  auto_ids:               true
+  input:                  GFM
+  math_engine:            mathjax
+  smart_quotes:           lsquo,rsquo,ldquo,rdquo
+  toc_levels:             1..6
+  syntax_highlighter:     rouge
+  syntax_highlighter_opts:
+    guess_lang:           true
+
+markdown_ext:     markdown,mkdown,mkdn,mkd,md
+
+# Permalinks
+permalink:        /:categories/:year-:month-:day-:title:output_ext
+
+exclude:
+  - _drafts
+
+destination:      ./_site
+incremental:      false
+regenerate:       true
+
+plugins:
+  - jemoji
