--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ version:          1.0
 gitbook_version:  3.2.3
 
 url:              'https://dew0011.github.io'
-baseurl:          '/jekyll-gitbook'
+baseurl:          '/Na-srebrnym-globie'
 rss:              RSS
 
 # markdown render engine.
